src/components/People.css
html, body {
  margin: 0;
  padding: 0;
}

.meet-team-container {
  text-align: center;
  margin-top: 20px;
  height: 70vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.meet, .the-team {
  display: inline-block;
  color: #051E4F;
  font-family: "Mixta-Sharp";
  font-weight: 300;
  line-height: 164.32px;
  word-wrap: break-word;
  font-size: 208px; /* Consolidated font-size */
  margin: 0 10px;
}

.meet {
  margin-right: 30vw;
}

.the-team {
  margin-left: 30vw;
}

.box {
  background-color: #0C2B56;
  color: #FAE5E2;
  font-size: 96px;
  white-space: nowrap;
}

.box-text {
  transform: rotate(180deg);
  color: #FBE4DF;
  font-size: 128px;
  font-family: Neue Haas Grotesk Display Pro;
  font-weight: 350;
  line-height: 108.80px;
  word-wrap: break-word;
}

.subgroup-container, .person-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 0px;
  padding: 0;
  margin: 0;
}

.person-container {
  max-width: 50vw;
}

.name {
  font-size: 1.5rem;
  margin-bottom: 5px;
}

.d_type {
  font-size: 3rem;
}

.description {
  font-size: 0.9rem;
  color: #051E4F;
  justify-self: start;
  text-align: left;
}

.d_type_box {
  display: flex;
  flex-direction: row;
}

.people-page-body img {
  max-width: 25vw;
}

/* Presidents Section */
.presidents {
  display: grid;
  grid-template-columns: 165px 1fr 1fr;
  margin-bottom: 300px;
  height: min-content;
}

.presidents-box {
  transform: rotate(90deg);
  transform-origin: bottom left;
  width: fit-content;
  height: fit-content;
  justify-self: inherit;
  margin: 0;
  padding: 0;
}

.presidents-box-text {
  padding-top: 20px;
  padding-left: 200px;
}

/* Chiefs Section - Applying similar structure as Presidents */
.chiefs {
  display: grid;
  grid-template-columns: 1fr 1fr 165px;
  margin-bottom: 300px;
}

.chiefs-box {
  transform: rotate(-90deg);
  transform-origin: bottom right;
  width: fit-content;
  height: fit-content;
  justify-self: end;
  margin: 10px;
  padding: 10px;
}

.chiefs-box-text {
  /* No rotation needed as in .box-text */
}

/* Directors Section */
.directors {
  display: grid;
  grid-template-columns: 165px auto;
  margin-bottom: 300px;
}

.directors-box {
  transform: rotate(90deg);
  transform-origin: bottom left;
  width: fit-content;
  height: fit-content;
  justify-self: inherit;
  margin: 0;
  padding: 0;
}

.emily {
  display: flex;
  flex-direction: row;
  margin-bottom: 100px;
}

.d_type_image {
  display: flex;
  flex-direction: column;
}

.emily .nameAndDescription {
  align-self: end;
  padding-left: 10px;
}

.chenming {
  justify-self: start;
}

.subgroup_containerD_all {
  width: 100vw;
  display: flex;
  flex-direction: column;
}

.d_type_box {
  display: grid;
  grid-template-columns: 40vw 40vw;
  height: fit-content;
}

.elias {
  justify-self: start;
  padding: 30px;
}

.finance_name {
  padding-bottom: 200px;
}

/* 2x1 grid */
.subgroup-containerD {
  width: 100vw;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

